Fix all kinds of small problems

--- a/allreferences.bib
+++ b/allreferences.bib
@@ -582,7 +582,7 @@
   title		= {On the (im) possibility of fairness},
   author	= {Friedler, Sorelle A and Scheidegger, Carlos and
 		  Venkatasubramanian, Suresh},
-  journal	= {arXiv preprint arXiv:1609.07236},
+  journal	= {arXiv preprint arXiv: 1609.07236},
   year		= {2016}
 }
 
@@ -1374,7 +1374,7 @@
 }
 
 @Article{	  lecun1998gradient,
-  title		= {Gradient-based learning applied to document recognition},
+  title		= {Gra\-di\-ent-based learning applied to document recognition},
   author	= {LeCun, Yann and Bottou, L{\'e}on and Bengio, Yoshua and
 		  Haffner, Patrick},
   journal	= {Proceedings of the IEEE},
@@ -1438,7 +1438,7 @@
 @InCollection{	  LocAbbRaiBauetal19,
   title		= {On the Fairness of Disentangled Representations},
   author	= {Locatello, Francesco and Abbati, Gabriele and Rainforth,
-		  Thomas and Bauer, Stefan and Sch\"{o}lkopf, Bernhard and
+		  Thomas and Bauer, Stefan and Sch\"{o}lkopf, Bern\-hard and
 		  Bachem, Olivier},
   booktitle	= {Advances in Neural Information Processing Systems 32},
   editor	= {H. Wallach and H. Larochelle and A. Beygelzimer and F.
