--- a/ch/4-structure.tex
+++ b/ch/4-structure.tex
@@ -112,7 +112,7 @@ As colour is ``easier'' to learn, a neural network will learn to predict \(s\) i
 For additional experiments on the CelebA dataset and the UCI Adult Income dataset,
 we deliberately apply sampling bias to the training set and then apply our method.
 
-\section{Using an unlabelled deployment set to overcome sampling bias}\label{sec:zsf}
+\section{Using an unlabelled deployment set to overcome sam\-p\-ling bias}\label{sec:zsf}
 A shortcoming of the approach from the previous chapter
 is its reliance on a representative set which has \(s\) labels.
 As discussed, it is necessary to make use of \emph{some} kind of side information,
