--- a/paper2/1-introduction.tex
+++ b/paper2/1-introduction.tex
@@ -90,7 +90,7 @@ The focus of our approach is on creating invariant representations that preserve
 % The problem of fair representations can also be viewed through a similar lens.
 % A good toy model for this setup is the Coloured MNIST (cMNIST) dataset.
 % In this example, the colour is a spurious variable which is very closely correlated with the prediction target in the training set but not in the deployment setting.
-% An interpretable invariant representation in this case is the images uniform in colour. More details regarding the setup and synthesis of the dataset can be found in Section~\ref{ssec:cmnist}.
+% An interpretable invariant representation in this case is the images uniform in colour. More details regarding the setup and synthesis of the dataset can be found in section~\ref{ssec:cmnist}.
 
 % As a more real-world dataset, we consider the CelebA dataset.
 % We treat the CelebA dataset as it is, as the deployment setting
