--- a/paper2/3-method.tex
+++ b/paper2/3-method.tex
@@ -100,7 +100,7 @@ It fulfils $\mathcal{I}(S^\mathit{rep}; Y^\mathit{rep}) \approx 0$
 (or rather, it would, if the class labels $Y^\mathit{rep}$ were available).
 %{\color{red} justify the existence of such a dataset}
 
-We now summarise the training procedure; an outline for the invertible network model (cFlow) can be seen in Fig.~\ref{fig:inn_diagram}.
+We now summarise the training procedure; an outline for the invertible network model (cFlow) can be seen in fig.~\ref{fig:inn_diagram}.
 First, the encoder network $f$ is trained on ($X^\mathit{rep}, S^\mathit{rep}$), during the first phase.
 The trained network is then used to encode the training set,
 taking in $\bm{x}$ and producing the representation, $\bm{z}_u$, decorrelated from the spurious variable.
