--- a/paper3/paper3.tex
+++ b/paper3/paper3.tex
@@ -121,7 +121,7 @@ Thomas Kehrenberg$^1$, Viktoriia Sharmanska$^1$, Myles Bartlett$^1$, and Novi Qu
 $^1$ Predictive Analytics Lab (PAL), University of Sussex, Brighton, UK\\
 \textsc{Conference}:\;\; Submitted to \textit{Internation Conference on Machine Learning} (ICML), 2021 \\
 % \textsc{DOI}:\;\;10.3389/frai.2020.00033
-\textsc{Note}:\;\;The appendix has been included as section~\ref{sec:zsf-appendix}.
+\textsc{Note}:\;\; The appendix has been included as section~\ref{sec:zsf-appendix}.
 
 \section{Abstract}
 Machine learning models are typically trained to optimise global metrics such as average classification accuracy. 
@@ -236,7 +236,7 @@ Specifically, our paper provides the following contributions:
 \end{enumerate}
 
 \section{Related work.}
-We describe related work in two areas: zero-shot learning and semi-supervised learning.
+We describe related work in two areas: zero-shot learning and semi-su\-per\-vi\-sed learning.
 %and disentangled representation learning. 
 
 \subsection{On zero-shot learning.}
