--- a/main.tex
+++ b/main.tex
@@ -74,7 +74,7 @@ titlepage,numbers=noenddot,%1headlines,
 \newcommand{\myUni}{University of Sussex\xspace}
 \newcommand{\myLocation}{Hove\xspace}
 \newcommand{\myTime}{March 2021\xspace}
-\newcommand{\myVersion}{Thesis v0.2}
+\newcommand{\myVersion}{Thesis v0.3}
 
 % ********************************************************************
 % Setup, finetuning, and useful commands
@@ -492,8 +492,10 @@ titlepage,numbers=noenddot,%1headlines,
 }
 \part{Preliminaries}\label{pt:intro}
 \include{ch/1-introduction}
+\chapter{Related work}\label{ch:related-work}
 \include{ch/2-related-work}
 % \include{ch/3-0-common-notation}
+\chapter{Summary of contributions}\label{ch:content}
 \include{ch/4-structure}
 
 \cleardoublepage
